--- a/package.json
+++ b/package.json
@@ -8,18 +8,21 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@material-ui/core": "^4.12.3",
+    "@emotion/css": "^11.7.1",
+    "@emotion/react": "^11.7.1",
+    "@emotion/server": "^11.4.0",
+    "@emotion/styled": "^11.6.0",
+    "@mui/material": "^5.3.0",
     "lodash": "^4.17.21",
     "next": "12.0.8",
     "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "styled-components": "^5.3.3"
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@emotion/babel-plugin": "^11.7.2",
     "@types/lodash": "^4.14.178",
     "@types/node": "17.0.10",
     "@types/react": "17.0.38",
-    "@types/styled-components": "^5.1.20",
     "eslint": "8.7.0",
     "eslint-config-airbnb-typescript": "^16.1.0",
     "eslint-config-next": "12.0.8",
